# apiary-hive

./: .gitignore  README.md  bee-file-spec.json  docker-compose.yml
.do/: app.yaml
backend/: Dockerfile  config.py  main.py  pyproject.toml
backend/hive/: auth.py  bundle_review.py  bundles.py  ingest.py  lm.py  lm_factory.py  nlp.py
backend/routers/: bundles.py  validate.py
backend/schemas/: bundles.py  validate.py
backend/tests/: test_bundles_compute.py  test_bundles_route.py  test_ingest.py  test_lm.py  test_validate_route.py
docs/specs/: byom-relocation-spec.md
docs/superpowers/plans/: 2026-07-12-byom-relocation.md
frontend/: Dockerfile  index.html  nginx.conf  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/__tests__/: AiInsightStrip.test.tsx  Badge.test.tsx  Button.test.tsx  Card.test.tsx  Chip.test.tsx  EmptyState.test.tsx  GatherView.test.tsx  Icon.test.tsx  LandingView.test.tsx  SettingsPanel.test.tsx  bee.test.ts  export.test.ts  state.test.ts
frontend/src/components/hive/: BundleCard.tsx  BundleContributionMap.tsx  BundlingSensitivityPanel.tsx  PhaseHeader.tsx  StaleWarning.tsx
frontend/src/components/ui/: AiInsightStrip.tsx  Badge.tsx  Button.tsx  Card.tsx  Chip.tsx  EmptyState.tsx  Icon.tsx
frontend/src/lib/: api.ts  bee.ts  constants.ts  export.ts  state.ts  types.ts
frontend/src/views/: ConsolidateView.tsx  ExportView.tsx  GatherView.tsx  LandingView.tsx  SettingsPanel.tsx
