[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "apiary-hive-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.29",
  "python-multipart>=0.0.9",
  "pandas>=2.2",
  "networkx>=3.3",
  "rapidfuzz>=3.9",
  "httpx>=0.27",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "httpx>=0.27"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

